--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">NasaFeed</string>
+    <string name="app_name">Nasa: Image of the day</string>
 </resources>
